--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
 
         <p>My email addy is <a href="mailto:tom@github.com">tom@github.com</a>.</p> -->
 
+        <h2>First update on the group project!</h2>
+
+        <p>Created: 26-2-2022</p>
+
+        <p>=We have decided to make an app design with the idea of 'Smart Laudry'.</p>
+        
+
         <h2>Hello World</h2>
 
         <p>Created: 7-2-2022</p>
