--- a/index.html
+++ b/index.html
@@ -29,28 +29,17 @@
 
         <p>Created: 7-2-2022</p>
 
-        <!-- <h2>A bit of the GitHub spice</h2>
-
-        <p>In addition to the changes in the previous section, certain references are auto-linked:</p>
-
-        <ul>
-          <li>SHA: be6a8cc1c1ecfe9489fb51e4869af15a13fc2cd2</li>
-          <li>User@SHA ref: <a href="https://github.com/mojombo/product/commit/be6a8cc1c1ecfe9489fb51e4869af15a13fc2cd2" class="commit-link">mojombo@<tt>be6a8cc</tt></a></li>
-          <li>User/Project@SHA: <a href="https://github.com/mojombo/god/commit/be6a8cc1c1ecfe9489fb51e4869af15a13fc2cd2" class="commit-link">mojombo/god@<tt>be6a8cc</tt></a></li>
-          <li>#Num: <a href="https://github.com/github/product/issues/1" class="issue-link" title="Baseline: What is up in the air right now?">#1</a></li>
-          <li>User/#Num: mojombo#1</li>
-          <li>User/Project#Num: <a href="https://github.com/mojombo/god/issues/1" class="issue-link" title="The server is not available (or you do not have permissions to access it)">mojombo/god#1</a></li>
-        </ul>
-
-        <p>These are dangerous goodies though, and we need to make sure email addresses don't get mangled:</p>
-
-        <p>My email addy is <a href="mailto:tom@github.com">tom@github.com</a>.</p> -->
-
         <h2>First update on the group project!</h2>
 
         <p>Created: 26-2-2022</p>
 
-        <p>=We have decided to make an app design with the idea of 'Smart Laudry'.</p>
+        <p>We have decided to make an app design with the idea of 'Smart Laudry'. 
+          The reason behind this is that, we found ourselves all have the idea to improve the laudry rooms on campus. 
+          The thing is, everytime a student goes down to laudry rooms, he found no machines available, and have to either wait or go back to his room with no luck.
+          Another thing is, many students they just forgot to take their clothes out even the washing is finished anyway.
+          Think of a persona, we got a busy student, he has many deadlines coming, there's not really much time left, how can he even bother with washing clothes?? There should be a better solution to this!.
+          So what's our app? We decide to show the realtime status of the machines 
+          I joined the task on making the apps on a website called 'figma'. </p>
         
 
         <h2>Hello World</h2>
