--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
           The thing is, everytime a student goes down to laudry rooms, he found no machines available, and have to either wait or go back to his room with no luck.
           Another thing is, many students they just forgot to take their clothes out even the washing is finished anyway.
           Think of a persona, we got a busy student, he has many deadlines coming, there's not really much time left, how can he even bother with washing clothes?? There should be a better solution to this!.
-          So what's our app? We decide to show the realtime status of the machines 
-          I joined the task on making the apps on a website called 'figma'. </p>
+          So what's our app? We decide to show the realtime status of the machines, students could queue on the machines that are about to complete.
+          Altogether with other functionalities.
+          I joined the task on making the apps on a website called 'figma'. We tried to implement some of the UX/UI designs feature here.
+          Including a dark theme + round corner design.
+          <img src="images/1.jpg" width="250" height="150">
+         </p>
         
 
         <h2>Hello World</h2>
