--- a/index.html
+++ b/index.html
@@ -32,17 +32,29 @@
         <h2>First update on the group project!</h2>
 
         <p>Created: 26-2-2022</p>
-
+        
+        <h3>Where do we start</h3>
         <p>We have decided to make an app design with the idea of 'Smart Laudry'. 
           The reason behind this is that, we found ourselves all have the idea to improve the laudry rooms on campus. 
           The thing is, everytime a student goes down to laudry rooms, he found no machines available, and have to either wait or go back to his room with no luck.
           Another thing is, many students they just forgot to take their clothes out even the washing is finished anyway.
-          Think of a persona, we got a busy student, he has many deadlines coming, there's not really much time left, how can he even bother with washing clothes?? There should be a better solution to this!.
-          So what's our app? We decide to show the realtime status of the machines, students could queue on the machines that are about to complete.
+          <br>
+          <br>Think of a persona, we got a busy student, he has many deadlines coming, there's not really much time left, how can he even bother with washing clothes?? There should be a better solution to this!
+          <br>
+          <br>We decide to show the realtime status of the machines, students could queue on the machines that are about to complete.
           Altogether with other functionalities.
-          I joined the task on making the apps on a website called 'figma'. We tried to implement some of the UX/UI designs feature here.
-          Including a dark theme + round corner design.
-          <img src="images/1.jpg" width="250" height="150">
+          <br>I joined the task on making the apps on a website called 'figma'. We tried to implement some of the UX/UI designs feature here.
+          Including a dark theme + round corner design. Let's see what's in our app.
+          <img src="images/1.jpg" width="400" height="500">
+          <br> you can see the basic design theme of our app, including the washer list, timer, the blue lines are for the control/function flow(more on that later).
+          <br>The real challenge, however, comes when arranging that many elements inside figma. 
+          So we have 3 peoples working together on this. But we all agreed that when it comes to editing the figma elements, it's very complicated.
+          The objects have different depth, layering, makes it very hard to click, edit. Luckily, we group the things in a organise manner, making it 
+          a lot easier to change, the downside though, is we need more time to explain it to other members on the organisation.
+          <br><br>
+          One thing about Figma which is good though (thanks you to Elizabeth for recommending such tool) is the ability to implement simple flows.
+          <br>For example, we have designed many sub menus, tips, and other funcitons inside our app. How to we navigate inside these functions,
+          we think by using a menu(or 'Hamberger' if you prefer that name).
          </p>
         
 
