--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <p>Created: 7-2-2022</p>
 
-        <h2>First update on the group project!</h2>
+        <h2>Group project 1!</h2>
 
         <p>Created: 26-2-2022</p>
         
@@ -61,13 +61,25 @@
               So we have 3 peoples working together on this. But we all agreed that when it comes to editing the figma elements, it's very complicated.
               The objects have different depth, layering, makes it very hard to click, edit. Luckily, we group the things in a organise manner, making it 
               a lot easier to change, the downside though, is we need more time to explain it to other members on the organisation.</p>
-              <h3>Gettings hand on</h3>
+              <h3>Gettings hands on</h3>
               One thing about Figma which is good though (thanks you to Elizabeth for recommending such tool) is the ability to implement simple flows.
           <br>For example, we have designed many sub menus, tips, and other funcitons inside our app. How to we navigate inside these functions,
           we think by using a menu(or 'Hamberger' if you prefer that name). The menu will have 4 elements, and the user can interact with them.
           <img src="images/2.jpg" width="400" height="500">
           <br>Yeah...The blue lines are very messy, but they are the backbone of our functionalities. 
           The blue link are the flows of our control. It's like, if we press one of the button, it will follow the lines from that button, to the page we *point to.
+          <img src="images/3.jpg" width="500" height="400">
+          <br> The functionalities are mostly done via linking pages together with this flow function shown in the picture. Also, we had a hard time tuning the rounded corner elements and the relative position of elements.
+          <h3>Experiences</h3>
+          In my opinion, I think making a balance of intuitive control to the user and the aesthetics of elements&color scheme is a interesting topic.
+          You can make the colors contrasting very well, that will make the whole app ery intuitive to the users because they know the elements are different things
+          from the fact that they have different colors. But, that will destroy whole balance in color scheme, aesthetics area of the app will be ruined.
+          On the other hand, using coherance, paired color is good, but it is not so inituitive to users, or epressing our intended idea by that color&shape.
+          So in this case, different shapes are needed to indicate the elements are different. But then we have to think again our shape scheme (Remember the rounded-corner thing I mentioned before?)
+          <br> <br>Anyway, It is a fun group project at the end. I know how to balance my own idea in the functionalities of the app, with our teammates, after working with them.
+          Adding too much complex functionalities on a simple app (which is our start point) can sometimes be a bad thing (not to mention whether our tech allows it),
+          but, too least function also makes it not attractive. Here co-operation is great for such situation, we can discuss and found a balance sweet point with
+          each of our own reasonings.
          </p>
         
 
