--- a/index.html
+++ b/index.html
@@ -79,7 +79,113 @@
           <p>The second method is called 2d plane. So it can only create planes that are different height. mostly 
             slopes are ignored. So the user can't walk on terrain. And it is very confusing to have somewhere you can't walk.
           It't like meeting a airwall in a game.
+          c
+          You can see the floor plan meseed up on slopes, and for stonhenge it's another mess. It means that the user can'walk inside the
+          stonhenge, and walk up the slope.
           </p>
+        <p>So at the end, we settled on the default terrain map, we added a flat plane on it, so it would 
+          be flat. And we can place objects on it without making to much of adjustment to the objects.
+          <img src="images/p35.jpg" width="1000" height="300">
+          This is the end product that ends up in the demo video.
+          The grey flat plane is what I mentioned. And we added objects to the plane. Moreover, clouds like sphere were also
+          added. Also the 'simple' water object was placed to make the titanic looks like sinking into the water.
+          <img src="images/p36.jpg" width="1000" height="300">
+          You may already figured out. We want to make a scene in the Titanic film. And it would be fun to 
+          get a feeling of standing at the end of the ship, to feel what that height feels.
+          <h3>Models - Processing</h3>
+          <h>We took some models on Sketchfab to be our heritage objects. But there are some models that 
+            are either hand-made or scanned using photogrammerty. We had a Fumishimi Castle in our map, which that model
+            was originally scanned into a 3D object.
+          </h>
+          <img src="images/p37.jpg" width="1000" height="400">
+          The original model is even larger than this, it is as if it's the whole scenery in there.
+          But we need to trim it down as a smaller object. The reason is, a small history lesson first. The japanese
+          castle were designed so high, and have a base that are multi stories is that, they can be higher when someone
+          trys to attack the castle. But it means that the floor plan generation and collision handling will be 
+          very hard for us. So we need to trim down the model in blender first, make it 'simpler'.
+        </p>
+          <h3>Battling with the max size limit - 128MB</h3>
+          <p>Somewhere into our peoject, after we placed some of the objects into the the world. And we found 
+            that it cannot be compiled. The reason simply is, mozilla hub only supports a world up to 128MB!!!!!
+            That means we need to shrink some sizes of the objects!! For example, a stonehenge will take approx. 37MB.
+            a fushimi castle took up 32MB. There's really not much of the space left.
+          </p>
+          <p>So what we done, is to reduce the texture size. The original texture in Fushimi Castle in 8K, which is 
+            8192*8192. We reduces its size to 2048*2048 in photoshop. And that castle only takes up 15MB now!
+          <img src="images/p38.jpg" width="1000" height="400">
+          We also changes the stonehenge to a simple one.
+          Instead of the very high definition stonehenge you saw in m=my previous shot. The new stonhenge is
+          rather simple, low poly. And it doesn't even have textures. So we need to paint it in brown in blender.
+          The new stonehenge now only eats up 1MB of size!
+        </p>
+        <p>Our final product eats up 127MB of size. This is really the most extreme size we can take. one more simple
+          object would exceeds the size limit and ruin the whole thing!
+        </p>
+        <p>Small reflection->I can imagine in the future I will be working with limited resources..I guess it's better
+          to save resources for later use at first, so when later optimizing the size, it would be alot easier to shrink 
+          its sizes.
+        </p>
+        <h3>Games implementation</h3>
+        <p>As I said, we want to implement games inside the mozilla hub. But it is function limited.
+          I tried make a basketball field inside it, but playing with it was rather boring. Primarily because of the
+          hitbox are wrong, and controlling, moving things inside the hub is very hard.
+          <img src="images/p39.jpg" width="1000" height="400">
+          So a guy suggest that, why we make some local traditional games around the world. That sounds interesting, And
+          relatively easy to implement, also fits our culture exchange theme.
+          <img src="images/p310.jpg" width="1000" height="400">
+          I searched some local games on web. And these traditional games are all mainly boardgames, so it's really easy
+          to implement. and we use duck+chicken to be our chess. The fron two games are Kaooa from India and another strategy
+          game from South Korea. The 3 games behind that are 3 different three in a row games from 3 different countries.
+          Though If I have time I would change the texture of the chicken. because that chicken is in white color, while 
+          game map is also in white, it will be maybe a little bit hard to distinguish.
+        </p>
+        <h3>DemoVideo</h3>
+        <p>I get to create Demo video for the project. I get the idea from a discontinued programme by TVB. It's called
+          the Earth Live (瞬間看地球), and it has been discontinued in the April the 1st. It's really sad lo...
+          <img src="images/p311.jpg" width="421" height="237">
+          <br>The programme is just a live camera around the world. But I think that is a small part of collective memories of 
+          Hong Kong. So I want to mimic the programme, by using the same UIs and Musics from it.
+          <img src="images/p312.jpg" width="1000" height="400">
+          You can see I photoshoped the UI into the video.
+          And that UI acted as a title also for each part of the demo.
+          In the demo I introduced and demo-ed many concepts in thie world, such as timetable feture, it's like, I don't know
+          someone who's reading this have played GTAv before, on the online server, there will be random event every 5-10 minutes or so.
+          And player will be motivated to paticipate in such event, so the online game play will be more interesting.
+          It is the same idea in our world, but a little different. Just the events are talks/shars/tours/games, they are
+          more 'educational' I would say. Because if you get into the world without anything todo, it would be rather boring.
+          It also have souvenir exchange feature, which I see it as a good way to enhance exchange among players.
+        </p>
+        <h3>End Credits</h3>
+        <p>Till the end of this project. To be honest, I personally think the whole map can be better, as well as the 
+          lighting. I asked a friend which I do needfinding and surverying about the final product, he's also the guy
+          who gives me initial idea on making a tourists spot map first. He said the map looks like a 3D game from the 
+          early 2000s. Where I can't agreed anymore. Because I later realized the lighting in mozilla hub is really
+          for indoor lighting. I can imagine other group using directional lighting to make a colorful pub out of this.
+        </p>
+        <p>More so, I with the size limit in the mozilla hub can be larger, Like at least 256MB of 200MB. Then 
+          we can put more building in the map to fill blanks, so the whole world will be prettier. and the objects will
+          be more high definition, and you can really walk under the stonehenge to feel what is like under the great rocks.
+          
+        </p>
+        <p>But anyway, I think the idea is what our project really shines. Because when we are thinking this project,
+          the normal ideas, like concert, karaoke and video watching is really old-school, and there are many alternatives
+          now, like Discord. Think if you are a user, why would I use this instead of discord?
+          Same goes for the games idea, why won't I just play human fall flat? Why I don't just play animal crossing or 
+          other sports games? 
+          When you start thinking this, you will realize there are really too much good product now, and it is really
+          meaningless to make a bad replication of those.
+        </p>
+        <p>But, there's no such culture/language exchange world right now, yes? Since people can't go our to travel due to
+          travel restriction of COVID, people don't have the chance to talk to others right? Then why won't us make people 
+          meet in the virtual world?
+          Oh yeah! Not to mention We have a souvenir feature, which allows players to exchange souvenirs that are a icon of
+          its country with others! That's really the point, the highlight of our project, and that's what differs ours to other
+          normal VR world. It will be a world with interactive, fruitful events.
+          <img src="images/p313.jpg" width="1000" height="400">
+        </p>
+        <h3>-------------------------------------------------------------------------------</h3>
+        <h3>--------------------------End of project 3 diary-----------------------------</h3>
+        <h3>-------------------------------------------------------------------------------</h3>
         <a name="project2"></a> 
         <h2>Group project 2 - Self Quarantine Chatbot</h2>
         <p>Created: 30-3-2022</p>
